--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.3.2",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
@@ -21,6 +23,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
